Implement PNG/PDF rendering with full ajstarks binary integration
- Implement PNG rendering using pngdeck with fontdir support
- Implement PDF rendering as single multi-page document using pdfdeck
- Fix PDF generation to use single command for all pages (not per-page)
- Add DECKFONTS environment variable support (defaults to .src/deckfonts)
- Update renderSlides to handle format-specific rendering strategies
- Fix wazero task to use correct flags and set DECKFONTS
- Add pkg/**/*.go to build sources for proper rebuilds

All three formats now work correctly:
- SVG: individual files per slide
- PNG: individual images per slide with font rendering
- PDF: single multi-page document with font rendering

--- a/taskfiles/build.yaml
+++ b/taskfiles/build.yaml
@@ -65,6 +65,7 @@ tasks:
       - handler/**/*.go
       - runtime/**/*.go
       - internal/**/*.go
+      - pkg/**/*.go
       - go.mod
       - go.sum
     generates:
@@ -80,6 +81,7 @@ tasks:
       - handler/**/*.go
       - runtime/**/*.go
       - internal/**/*.go
+      - pkg/**/*.go
       - go.mod
       - go.sum
     generates:
