--- a/taskfiles/run.yaml
+++ b/taskfiles/run.yaml
@@ -12,11 +12,11 @@ tasks:
   wazero:
     desc: Run wazero server locally (long-running)
     cmds:
-      - task build:wasi
       - task build:host
+      - task build:tools
       - lsof -ti :{{.PORT_WAZERO}} | xargs kill -9 2>/dev/null || true
       - echo "Wazero at http://localhost:{{.PORT_WAZERO}}"
-      - ./{{.BUILD_DIR}}/wazero/deckfs-host -wasm-file {{.BUILD_DIR}}/wasi/deckfs.wasm -addr :{{.PORT_WAZERO}}
+      - DECKFONTS={{.SRC_DIR}}/deckfonts ./{{.BUILD_DIR}}/wazero/deckfs-host -addr :{{.PORT_WAZERO}} -bin {{.BUILD_DIR}}/deck -examples {{.SRC_DIR}}/deckviz
 
   demo:
     desc: Run demo server (long-running)
