chore: Remove deprecated and unused code
Removed:
- internal/processor/ - Deprecated package replaced by pkg/pipeline
- cmd/browser/ - Unused browser WASM build target
- Browser build tasks from taskfiles/build.yaml and taskfiles/cf.yaml
- Browser references from CLAUDE.md

Added:
- .playwright-mcp/ to .gitignore

This cleanup removes code that was marked as deprecated or unused,
simplifying the build system and reducing maintenance overhead.

--- a/taskfiles/cf.yaml
+++ b/taskfiles/cf.yaml
@@ -49,9 +49,7 @@ tasks:
   r2-upload-wasm:
     desc: Upload WASM builds to R2
     cmds:
-      - task build:browser build:wasi
-      - bunx wrangler r2 object put {{.CF_R2_WASM}}/browser/deckfs.wasm --file {{.BUILD_DIR}}/browser/deckfs.wasm --remote
-      - bunx wrangler r2 object put {{.CF_R2_WASM}}/browser/wasm_exec.js --file {{.BUILD_DIR}}/browser/wasm_exec.js --remote
+      - task build:wasi
       - bunx wrangler r2 object put {{.CF_R2_WASM}}/wasi/deckfs.wasm --file {{.BUILD_DIR}}/wasi/deckfs.wasm --remote
 
   r2-list:
