feat: Fix PNG generation with charts and image assets
Changes:
- Add dchart to build tools (needed for chart rendering in decksh)
- Set PATH environment to include .bin/deck for dchart access
- Pass assetDir to renderSlides() for image asset resolution
- Set cmd.Dir for renderer commands to find image files
- Enhanced error reporting to include stderr from renderers

Fixes PNG generation for decks that use:
- Charts (via dchart binary)
- Image assets (*.png, *.jpg)
- Complex multi-slide presentations

Tested:
- B-17 deck with charts and images: ✅
- Elections deck with 7 slides: ✅
- Simple text-only decks: ✅

--- a/taskfiles/build.yaml
+++ b/taskfiles/build.yaml
@@ -57,7 +57,7 @@ tasks:
 
   tools:
     desc: Build ajstarks deck CLI binaries from .src (not the deckfs runtime)
-    deps: [tools-decksh, tools-dshfmt, tools-dshlint, tools-svgdeck, tools-pngdeck, tools-pdfdeck]
+    deps: [tools-decksh, tools-dshfmt, tools-dshlint, tools-svgdeck, tools-pngdeck, tools-pdfdeck, tools-dchart]
 
   tools-decksh:
     desc: Build decksh from .src
@@ -124,6 +124,17 @@ tasks:
       - test -f {{.ROOT_DIR}}/{{.BUILD_DIR}}/deck/pdfdeck
     preconditions:
       - test -d {{.ROOT_DIR}}/{{.SOURCE_DIR}}/deck
+
+  tools-dchart:
+    desc: Build dchart from .src
+    dir: "{{.ROOT_DIR}}/{{.SOURCE_DIR}}/dchart/cmd/dchart"
+    cmds:
+      - mkdir -p {{.ROOT_DIR}}/{{.BUILD_DIR}}/deck
+      - go build -o {{.ROOT_DIR}}/{{.BUILD_DIR}}/deck/dchart .
+    status:
+      - test -f {{.ROOT_DIR}}/{{.BUILD_DIR}}/deck/dchart
+    preconditions:
+      - test -d {{.ROOT_DIR}}/{{.SOURCE_DIR}}/dchart
 
   all:
     desc: Build all targets
