feat: Add R2 sync capabilities for examples and fonts
New Cloudflare tasks:
- cf:sync-examples - Sync .src/deckviz to R2 INPUT bucket
- cf:sync-folder - Generic folder→R2 sync (with PREFIX support)
- cf:sync-fonts - Sync .fonts/ to R2 FONTS bucket
- cf:r2-ls - List files in R2 bucket

New R2 bucket:
- DECKFS_FONTS - Font cache storage

This enables:
- Cloudflare Workers to access examples from R2
- Web demo to show examples (same as local)
- Shared font cache across all Worker instances
- Unified storage abstraction (local FS ↔ R2)

Usage:
  task cf:setup          # Creates all buckets including fonts
  task cf:sync-examples  # Upload all deckviz examples to R2
  task cf:sync-fonts     # Upload cached fonts to R2
  task cf:r2-ls BUCKET=deckfs-input PREFIX=b17/

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -21,6 +21,7 @@ vars:
   CF_R2_INPUT: deckfs-input
   CF_R2_OUTPUT: deckfs-output
   CF_R2_WASM: deckfs-wasm
+  CF_R2_FONTS: deckfs-fonts
   CF_QUEUE: deckfs-events
   CF_KV_NAMESPACE: DECKFS_STATUS
 
