Fix cross-platform examples and add deck endpoints
- Fix examples API format mismatch between platforms
  - Both wazero and cloudflare now return {count, examples}
  - Update demo HTML to extract data.examples

- Add /deck/ endpoints to shared handler
  - handleDeckRoute: route to slide or asset
  - handleDeckSlide: render specific slide from deck
  - handleDeckAsset: serve images/assets with correct content types
  - rewriteSVGLinks: rewrite temp paths to /deck/ URLs

- Fix build system to track demo files
  - Add demo/**/*.html to cloudflare build sources

- Fix wazero task variable naming
  - Use SOURCE_DIR instead of undefined SRC_DIR

Both Cloudflare Workers and local wazero server now have consistent
API responses and full deck viewing support.

--- a/taskfiles/build.yaml
+++ b/taskfiles/build.yaml
@@ -17,6 +17,8 @@ tasks:
       - handler/**/*.go
       - runtime/**/*.go
       - internal/**/*.go
+      - demo/**/*.go
+      - demo/**/*.html
       - go.mod
       - go.sum
     generates:
