Complete ADR 0006: Add validation, testing strategy, and CI/CD

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -37,6 +37,7 @@ includes:
   cf: ./taskfiles/cf.yaml
   src: ./taskfiles/src.yaml
   util: ./taskfiles/util.yaml
+  lint: ./taskfiles/lint.yaml
 
 tasks:
   default:
