--- a/taskfiles/lint.yaml
+++ b/taskfiles/lint.yaml
@@ -14,14 +14,14 @@ tasks:
         fi
         echo "✓ Handler package has no platform-specific imports"
       - |
-        # Check that handler only has cloudflare build tag
+        # Check that handler has NO build tags (it's cross-platform)
         for file in handler/*.go; do
-          if ! head -n 1 "$file" | grep -q "//go:build js || tinygo || cloudflare"; then
-            echo "❌ Error: $file missing required build tag"
+          if head -n 1 "$file" | grep -q "//go:build"; then
+            echo "❌ Error: $file should not have build tags (it's cross-platform)"
             exit 1
           fi
         done
-        echo "✓ All handler files have correct build tags"
+        echo "✓ Handler files are cross-platform (no build tags)"
 
   taskfile:
     desc: Lint Taskfile for consistent variable naming
@@ -49,14 +49,23 @@ tasks:
     cmds:
       - echo "Verifying build tags..."
       - |
-        # Handler must have js || tinygo || cloudflare
+        # Handler must NOT have build tags (cross-platform)
         for file in handler/*.go; do
-          if ! head -n 1 "$file" | grep -qE "//go:build (js|tinygo|cloudflare)"; then
-            echo "❌ Error: $file has incorrect build tag"
+          if head -n 1 "$file" | grep -q "//go:build"; then
+            echo "❌ Error: $file should not have build tags (it's cross-platform)"
             exit 1
           fi
         done
-        echo "✓ Handler build tags correct"
+        echo "✓ Handler has no build tags (cross-platform)"
+      - |
+        # Pipeline imports must NOT have build tags (cross-platform)
+        if [ -f pkg/pipeline/imports.go ]; then
+          if head -n 1 pkg/pipeline/imports.go | grep -q "//go:build"; then
+            echo "❌ Error: pkg/pipeline/imports.go should not have build tags (it's cross-platform)"
+            exit 1
+          fi
+        fi
+        echo "✓ Pipeline imports has no build tags (cross-platform)"
       - |
         # Runtime platform files must have correct tags
         if [ -f runtime/pipeline_wasm.go ]; then
