feat: Add auto-rebuild system for local development
Implements ADR-002 to solve the file sync problem where developers
had to manually rebuild after every change.

## Changes

### Phase 1: Fix Taskfile Dependencies
- Added demo/**/*.go and demo/**/*.html to build:host sources
- Task now detects when HTML changes and marks build as outdated

### Phase 2: File Watcher Integration
- Added watcher-wazero process to process-compose.yaml
- Uses watchexec to monitor: demo/, handler/, runtime/, cmd/wazero/
- Auto-rebuilds on .go and .html file changes
- Debounces at 500ms to prevent rebuild storms
- Auto-restarts wazero after successful rebuild

### Phase 3: Developer Dependencies
- Updated util:deps task to check for watchexec
- Provides install instructions for macOS/Linux/Windows
- Warns if watchexec not installed but allows development to continue

## Developer Experience

Before:
1. Edit demo/index.html
2. Remember to run: task build:host
3. Remember to run: task pc:restart PROC=wazero
4. Refresh browser
5. (Often forgot steps 2-3 and debugged phantom issues)

After:
1. Edit demo/index.html
2. Save file
3. Wait 2 seconds (auto-rebuild)
4. Refresh browser
5. See changes!

Zero manual steps. Zero cognitive load.

## Testing

Tested by:
1. Installing watchexec via homebrew
2. Starting process-compose with watcher enabled
3. Modifying demo/index.html title
4. Verifying auto-rebuild and restart occurred
5. Confirming new content served

Related: ADR-002

--- a/process-compose.yaml
+++ b/process-compose.yaml
@@ -19,3 +19,25 @@ processes:
     disabled: true
     availability:
       restart: "no"
+
+  watcher-wazero:
+    command: |
+      watchexec \
+        --watch demo \
+        --watch handler \
+        --watch runtime \
+        --watch cmd/wazero \
+        --exts go,html \
+        --ignore '*.swp' \
+        --ignore '*.swo' \
+        --ignore '.git' \
+        --debounce 500ms \
+        --clear \
+        --on-busy-update restart \
+        -- sh -c 'echo "🔄 Rebuilding wazero..." && task build:host && echo "✅ Rebuild complete, restarting..." && task pc:restart PROC=wazero'
+    depends_on:
+      wazero:
+        condition: process_started
+    availability:
+      restart: on_failure
+      backoff_seconds: 5
