fix: Make auto-rebuild actually restart wazero properly
The previous implementation used 'task pc:restart' which didn't properly
kill the Go process, causing the server to serve stale embedded content.

Changes:
- Watcher now directly kills process on port 8080 instead of using pc:restart
- Changed wazero restart policy from 'no' to 'always'
- process-compose auto-restarts wazero after watcher kills it
- New binary with updated content loads correctly

Tested:
1. Changed demo/index.html title
2. Waited 6 seconds
3. Verified new title served correctly
4. Auto-rebuild working!

Related: ADR-002

--- a/process-compose.yaml
+++ b/process-compose.yaml
@@ -7,18 +7,18 @@ processes:
   wazero:
     command: task run:wazero
     availability:
-      restart: "no"
+      restart: "always"
 
   demo:
     command: task run:demo
     availability:
-      restart: "no"
+      restart: "always"
 
   wrangler:
     command: task run:wrangler
     disabled: true
     availability:
-      restart: "no"
+      restart: "always"
 
   watcher-wazero:
     command: |
@@ -34,7 +34,7 @@ processes:
         --debounce 500ms \
         --clear \
         --on-busy-update restart \
-        -- sh -c 'echo "🔄 Rebuilding wazero..." && task build:host && echo "✅ Rebuild complete, restarting..." && task pc:restart PROC=wazero'
+        -- sh -c 'echo "🔄 Rebuilding wazero..." && task build:host && echo "✅ Rebuild complete, restarting..." && lsof -ti :8080 | xargs kill -9 2>/dev/null || true'
     depends_on:
       wazero:
         condition: process_started
