feat: Add auto-rebuild support for Cloudflare development
You were right - I completely ignored Cloudflare! Now there are TWO watchers:

## What's New

### watcher-cloudflare Process
- Watches: demo/, handler/, runtime/, cmd/cloudflare/
- Auto-rebuilds: task build:cloudflare
- Auto-restarts: wrangler on port 8787
- Disabled by default (enable when doing CF development)

### Developer Options

**Option 1: Wazero (Default)**
- Fastest feedback
- Full features (SVG/PNG/PDF)
- Enable: watcher-wazero (already enabled)

**Option 2: Cloudflare Local**
- Test CF worker locally with auto-rebuild
- Enable: Set disabled: false for wrangler + watcher-cloudflare
- Both servers run simultaneously (:8080 and :8787)

**Option 3: Both at Once**
- Run wazero + wrangler + both watchers
- Test cross-platform behavior
- Auto-rebuild for BOTH on every save

### Why Disabled by Default?

Most development happens on wazero (faster, full features).
CF watcher is opt-in for when you specifically need to test
Cloudflare Worker behavior locally.

### Updated Documentation

- CLAUDE.md: Explains both watchers and how to enable CF
- README.md: Shows 3 development options (wazero/CF/both)
- process-compose.yaml: Added watcher-cloudflare (disabled)

Related: ADR-002

--- a/process-compose.yaml
+++ b/process-compose.yaml
@@ -41,3 +41,26 @@ processes:
     availability:
       restart: on_failure
       backoff_seconds: 5
+
+  watcher-cloudflare:
+    command: |
+      watchexec \
+        --watch demo \
+        --watch handler \
+        --watch runtime \
+        --watch cmd/cloudflare \
+        --exts go,html \
+        --ignore '*.swp' \
+        --ignore '*.swo' \
+        --ignore '.git' \
+        --debounce 500ms \
+        --clear \
+        --on-busy-update restart \
+        -- sh -c 'echo "🔄 Rebuilding Cloudflare worker..." && task build:cloudflare && echo "✅ Rebuild complete, restarting wrangler..." && lsof -ti :8787 | xargs kill -9 2>/dev/null || true'
+    depends_on:
+      wrangler:
+        condition: process_started
+    disabled: true
+    availability:
+      restart: on_failure
+      backoff_seconds: 5
